--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,12 @@ on:
 jobs:
   build-and-test:
 
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        jdk_version: ['11', '17']
+        machine: ['ubuntu-latest', 'macos-latest']
+
+    runs-on: ${{ matrix.machine }}
 
     steps:
     - uses: actions/checkout@v3
